fix technical debt